# sidenotes

./: .gitattributes  .gitignore  CHANGELOG.MD  Cargo.toml  README.md  _config.yml  cliff.toml  index.md  release.toml  renovate.json
.github/workflows/: build.yml  release-test.yml  release.yml
_includes/: head-custom.html
assets/css/: style.css
ews-calendar/: Cargo.toml
ews-calendar/examples/: next_appointment_today.rs
ews-calendar/src/: lib.rs  parser.rs
jira-parser/: Cargo.toml
jira-parser/src/: ast.rs  lib.rs  nom_parser.rs
jira-parser/tests/: combinations.rs  formattings.rs  jira-ticket-crlf.txt  lists.rs  panel.rs  tables.rs
src/: config.rs  main.rs  sync.rs
src/calendar/: ews.rs  mod.rs
src/jobs/: configure_providers.rs  fetch_appointments.rs  fetch_comments.rs  fetch_todos.rs  load_config.rs  mod.rs  provider_action.rs  sync_timer.rs
src/models/: mod.rs
src/providers/: devops.rs  github.rs  gitlab.rs  mod.rs  taskwarrior.rs
src/providers/confluence/: api.rs  models.rs  provider.rs
src/providers/jira/: api.rs  mod.rs  models.rs  provider.rs
src/providers/joplin/: api.rs  models.rs  provider.rs
src/providers/microsoft/planner/: mod.rs  models.rs
src/providers/nextcloud/deck/: api.rs  mod.rs  models.rs  provider.rs
src/providers/upsource/: api.rs  mod.rs  models.rs  provider.rs
src/rich_text/: jira_markup.rs  markdown.rs  mod.rs
src/ui/: commands.rs  delegate.rs  detail.rs  lazy_icon.rs  lens.rs  list.rs  mod.rs  prism.rs  theme.rs
src/ui/views/: appointments.rs  detail.rs  mod.rs
src/ui/views/list/: meeting.rs  mod.rs  provider_item.rs  todo_item.rs
src/ui/views/settings/: calendar.rs  global.rs  mod.rs  widgets.rs
src/ui/views/settings/calendar/: ews.rs  mod.rs
src/ui/views/settings/providers/: confluence.rs  devops.rs  github.rs  gitlab.rs  jira.rs  joplin.rs  mod.rs  nextcloud.rs  taskwarrior.rs  upsource.rs
src/ui/views/settings/widgets/: flag_field.rs  mod.rs  provider_flag_row.rs  provider_row.rs  settings_field.rs  settings_row.rs
src/ui/views/settings/widgets/settings_builder/: calendar.rs  mod.rs  provider.rs
src/ui/widgets/: button.rs  clickable_area.rs  detail.rs  header.rs  list.rs  markup.rs  meeting.rs  mod.rs  timer.rs
src/ui/widgets/markup/: container.rs  mod.rs  settings_wrapper.rs  table.rs
