[workspace]
members = [
    ".",
    "jira-parser",
    "ews-calendar"
]

[package]
name = "sidenotes"
version = "0.1.0"
edition = "2018"
license = "GPL-3.0"

[features]
default = ["github", "jira", "joplin", "gitlab", "taskwarrior", "upsource", "nextcloud", "confluence", "ews-calendar"]
github = ["octorust", "async-compat"]
jira = ["surf", "base64", "jira-parser"]
confluence = ["surf", "base64"]
joplin = ["surf"]
taskwarrior = ["task-hookrs"]
upsource = ["surf", "serde_repr"]
nextcloud = ["surf", "base64"]

[dependencies]
directories-next = "2.0.0"
tracing = "0.1"
anyhow = "1"
druid = { git = "https://github.com/linebender/druid.git", features = ["im", "svg"], rev = "2f5beb8faba648c170a485b8d6a00d0d991a1737" }
octorust = { git = "https://github.com/maxjoehnk/third-party-api-clients.git", branch = "feature/run-on-stable", optional = true }
serde = { version = "1", features = ["derive"] }
task-hookrs = { version = "0.7.0", optional = true}
toml = "0.5.9"
smol = "1.3.0"
async-compat = { version = "0.2", optional = true }
futures = "0.3"
surf = { version = "2.3", optional = true }
base64 = { version = "0.13", optional = true }
gitlab = { version = "0.1505.0", optional = true }
enum_dispatch = "0.3.8"
pulldown-cmark = "0.8.0"
open = "3.0.3"
jira-parser = { path = "jira-parser", optional = true }
druid-widget-nursery = { git = "https://github.com/linebender/druid-widget-nursery", rev = "6d5dfc548603a45f307cfc1fde9b9d5f49863b49" }
serde_repr = { version = "0.1", optional = true }
im = { version = "15", features = ["serde"] }
ews-calendar = { path = "ews-calendar", optional = true }
chrono = "0.4.23"
derive_more = "0.99.17"
once_cell = "1.16"
uuid = { version = "1.2.2", features = ["v4"] }
palette = "0.6"
itertools = "0.10"

[profile.release]
strip = true
lto = true
codegen-units = 1
