[workspace]
members = [
    ".",
    "jira-parser",
    "ews-calendar"
]

[package]
name = "sidenotes"
version = "0.1.0"
edition = "2018"
license = "GPL-3.0"

[features]
default = ["github", "jira", "joplin", "gitlab", "taskwarrior", "upsource", "nextcloud", "confluence", "ews-calendar", "devops"]
github = ["octorust", "async-compat", "url"]
jira = ["surf", "base64", "jira-parser"]
confluence = ["surf", "base64"]
joplin = ["surf"]
taskwarrior = ["task-hookrs"]
upsource = ["surf", "serde_repr"]
nextcloud = ["surf", "base64"]
devops = ["azure_devops_rust_api", "async-compat"]

[dependencies]
directories-next = "2.0.0"
tracing = "0.1"
anyhow = "1"
druid = { git = "https://github.com/linebender/druid.git", features = ["im", "svg"], rev = "fc05e965c85fced8720c655685e02478e0530e94" }
octorust = { version = "0.3", optional = true }
url = { version = "2.5", optional = true }
serde = { version = "1", features = ["derive"] }
task-hookrs = { version = "0.9.0", optional = true}
toml = "0.8.8"
smol = "1.3.0"
async-compat = { version = "0.2", optional = true }
futures = "0.3"
surf = { version = "2.3", optional = true }
base64 = { version = "0.21.5", optional = true }
gitlab = { version = "0.1606.0", optional = true }
enum_dispatch = "0.3.12"
pulldown-cmark = "0.9.3"
open = "5.0.1"
jira-parser = { path = "jira-parser", optional = true }
druid-widget-nursery = { git = "https://github.com/linebender/druid-widget-nursery", rev = "462adec558b791e72a256a01e0bd377d7e746d40" }
serde_repr = { version = "0.1", optional = true }
im = { version = "15", features = ["serde"] }
ews-calendar = { path = "ews-calendar", optional = true }
chrono = "0.4.31"
derive_more = "0.99.17"
once_cell = "1.18"
uuid = { version = "1.6.1", features = ["v4"] }
palette = "0.7"
itertools = "0.12"
azure_devops_rust_api = { version = "0.14.1", features = ["git"], optional = true }

[profile.release]
strip = true
lto = true
codegen-units = 1

# generated by 'cargo dist init'
[profile.dist]
inherits = "release"
debug = true
split-debuginfo = "packed"

