[workspace]
members = [
    ".",
    "jira-parser",
    "ews-calendar"
]

[package]
name = "sidenotes"
version = "0.1.0"
edition = "2018"
license = "GPL-3.0"

[features]
default = ["github", "jira", "joplin", "gitlab", "taskwarrior", "upsource", "nextcloud", "confluence", "ews-calendar", "devops"]
github = ["octorust", "async-compat", "url"]
jira = ["surf", "base64", "jira-parser"]
confluence = ["surf", "base64"]
joplin = ["surf"]
taskwarrior = ["task-hookrs"]
upsource = ["surf", "serde_repr"]
nextcloud = ["surf", "base64"]
devops = ["azure_devops_rust_api", "async-compat"]

[dependencies]
directories-next = "2.0.0"
tracing = "0.1"
anyhow = "1"
druid = { version = "0.8", features = ["im", "svg"] }
octorust = { version = "0.7", optional = true }
url = { version = "2.5", optional = true }
serde = { version = "1", features = ["derive"] }
task-hookrs = { version = "0.9.0", optional = true}
toml = "0.8.10"
smol = "2.0.0"
async-compat = { version = "0.2", optional = true }
futures = "0.3"
surf = { version = "2.3", optional = true }
base64 = { version = "0.21.7", optional = true }
gitlab = { version = "0.1608.1", optional = true }
enum_dispatch = "0.3.12"
pulldown-cmark = "0.9.6"
open = "5.1.0"
jira-parser = { path = "jira-parser", optional = true }
druid-widget-nursery = "0.1"
serde_repr = { version = "0.1", optional = true }
im = { version = "15", features = ["serde"] }
ews-calendar = { path = "ews-calendar", optional = true }
chrono = "0.4.34"
derive_more = "0.99.17"
once_cell = "1.19"
uuid = { version = "1.7.0", features = ["v4"] }
palette = "0.7"
itertools = "0.12"
azure_devops_rust_api = { version = "0.17.0", features = ["git"], optional = true }

[profile.release]
strip = true
lto = true
codegen-units = 1

# generated by 'cargo dist init'
[profile.dist]
inherits = "release"
debug = true
split-debuginfo = "packed"

